--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,10 +1576,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data18 = data(18, lambda line: tuple([int(x) for x in line.split(',')]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def generate_sides(square):\n",
+    "  x, y, z = square\n",
+    "  return [\n",
+    "    (square, (x+1, y, z+1)),\n",
+    "    (square, (x+1, y+1, z)),\n",
+    "    (square, (x, y+1, z+1)),\n",
+    "    ((x+1, y, z), (x+1, y+1, z+1)),\n",
+    "    ((x, y+1, z), (x+1, y+1, z+1)),\n",
+    "    ((x, y, z+1), (x+1, y+1, z+1)),\n",
+    "  ]\n",
+    "\n",
+    "def day18(data):\n",
+    "  unique = set()\n",
+    "  joined = set()\n",
+    "  for square in data:\n",
+    "    for side in generate_sides(square):\n",
+    "      if side in joined:\n",
+    "        continue\n",
+    "      elif side in unique:\n",
+    "        unique.remove(side)\n",
+    "        joined.add(side)\n",
+    "      else:\n",
+    "        unique.add(side)\n",
+    "  print(len(unique), len(joined))\n",
+    "  return len(unique)\n",
+    "\n",
+    "day18(data18)"
+   ]
   }
  ],
  "metadata": {
