clean up day 18

--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "339"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,14 +1004,11 @@
     "data12 = data(12)\n",
     "start, end, find_routes = parse12(data12)\n",
     "\n",
-    "test = set()\n",
     "def dijkstra(start, end, route_finder, cache={}):\n",
     "  visited, q = set([start]), deque(route_finder(start, 0))\n",
     "  while q:\n",
     "    current, i = q.popleft()\n",
     "    if current == end:\n",
-    "      global test\n",
-    "      test = visited\n",
     "      return i\n",
     "    for option, j in route_finder(current, i):\n",
     "      if option not in visited:\n",
@@ -1588,9 +1585,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4314"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generate_sides(square):\n",
     "  x, y, z = square\n",
@@ -1603,7 +1611,7 @@
     "    ((x, y, z+1), (x+1, y+1, z+1)),\n",
     "  ]\n",
     "\n",
-    "def day18(data):\n",
+    "def day18_1(data):\n",
     "  unique = set()\n",
     "  joined = set()\n",
     "  for square in data:\n",
@@ -1617,201 +1625,76 @@
     "        unique.add(side)\n",
     "  return unique\n",
     "\n",
-    "uniques = day18(data18)"
+    "len(day18_1(data18))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2444 4314\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2444"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "surfaces = set()\n",
-    "\n",
-    "# No idea why this works, I have aphantasia\n",
-    "def generate_diff(initial, s1, s2):\n",
+    "def generate_surface_diff(initial, s1, s2):\n",
+    "  # No idea why this function works, I have aphantasia\n",
     "  if s1 != s2:\n",
     "    return 0\n",
     "  return -1 if initial == s1 else 1\n",
     "\n",
-    "def route_finder(surface, i):\n",
-    "  x, y, z = surface\n",
-    "  for side in generate_sides(surface):\n",
-    "    if side in uniques:\n",
-    "      surfaces.add(side)\n",
-    "    else:\n",
-    "      (a, b, c), (e, f, g) = side\n",
-    "      result = (\n",
-    "        x + generate_diff(x, a, e),\n",
-    "        y + generate_diff(y, b, f),\n",
-    "        z + generate_diff(z, c, g),\n",
-    "      )\n",
-    "      if not any([x < -1 or x > 23 for x in result]):\n",
-    "        yield (result, i+1)\n",
+    "def find_bounds(data):\n",
+    "  start, end = math.inf, 0\n",
+    "  for i in data:\n",
+    "    start, end = min(min(i), start), max(max(i), end)\n",
+    "  return start-1, end+1\n",
     "\n",
-    "dijkstra((-1,-1,-1), (23,23,23), route_finder)\n",
-    "print(len(surfaces), len(uniques))"
+    "def day18_2(data):\n",
+    "  start, end = find_bounds(data)\n",
+    "  uniques, surfaces = day18_1(data), set()\n",
+    "\n",
+    "  def route_finder(surface, i):\n",
+    "    x, y, z = surface\n",
+    "    for side in generate_sides(surface):\n",
+    "      if side in uniques:\n",
+    "        surfaces.add(side)\n",
+    "      else:\n",
+    "        (a, b, c), (e, f, g) = side\n",
+    "        result = (\n",
+    "          x + generate_surface_diff(x, a, e),\n",
+    "          y + generate_surface_diff(y, b, f),\n",
+    "          z + generate_surface_diff(z, c, g),\n",
+    "        )\n",
+    "        if not any([x < start or x > end for x in result]):\n",
+    "          yield (result, i+1)\n",
+    "\n",
+    "  dijkstra((start, start, start), (end, end, end), route_finder)\n",
+    "  return len(surfaces)\n",
+    "\n",
+    "day18_2(data18)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 19"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "64\n",
-      "19 64\n",
-      "60\n"
-     ]
-    }
-   ],
-   "source": [
-    "def find_adjacent_surfaces(surface):\n",
-    "  (a, b, c), (x, y, z) = surface\n",
-    "  # return generate_sides((a, b, c))\n",
-    "\n",
-    "  return [\n",
-    "    ((a+1, b, c), (x+1, y, z)),\n",
-    "    ((a-1, b, c), (x-1, y, z)),\n",
-    "    ((a, b+1, c), (x, y+1, z)),\n",
-    "    ((a, b-1, c), (x, y-1, z)),\n",
-    "    ((a, b, c+1), (x, y, z+1)),\n",
-    "    ((a, b, c-1), (x, y, z-1)),\n",
-    "\n",
-    "  ]\n",
-    "\n",
-    "  # if b == y:\n",
-    "  #   return [\n",
-    "  #     ((a+1, b, c), (x+1, y, z)), # shift x\n",
-    "  #     ((a-1, b, c), (x-1, y, z)),\n",
-    "  #     ((a, b, c+1), (x, y, z+1)), # shift z\n",
-    "  #     ((a, b, c-1), (x, y, z-1)),\n",
-    "  #     # # ((a+1, b, c+1), (x+1, y, z+1)), # shift x and z\n",
-    "  #     # # ((a-1, b, c+1), (x-1, y, z+1)),\n",
-    "  #     # # ((a+1, b, c-1), (x+1, y, z-1)), \n",
-    "  #     # # ((a-1, b, c-1), (x-1, y, z-1)),\n",
-    "\n",
-    "  #     # ((a, b, c), (a+1, b+1, c)), # shift x and y\n",
-    "  #     # ((a, b, c+1), (a+1, b+1, c+1)),\n",
-    "  #     # ((a, b-1, c), (a+1, b, c)),\n",
-    "  #     # ((a, b-1, c+1), (a+1, b, c+1)),\n",
-    "  #     # ((a, b, c), (a, b+1, c+1)), # shift z and y\n",
-    "  #     # ((a+1, b, c), (a+1, b+1, c+1)),\n",
-    "  #     # ((a, b-1, c), (a, b, c+1)),\n",
-    "  #     # ((a+1, b-1, c), (a+1, b, c+1)),\n",
-    "  #   ]\n",
-    "\n",
-    "  # if c == z:\n",
-    "  #   return [\n",
-    "  #     ((a+1, b, c), (x+1, y, z)), # shift x\n",
-    "  #     ((a-1, b, c), (x-1, y, z)),\n",
-    "  #     ((a, b+1, c), (x, y+1, z)), # shift y\n",
-    "  #     ((a, b-1, c), (x, y-1, z)),\n",
-    "  #     # # ((a+1, b+1, c), (x+1, y+1, z)), # shift x and y\n",
-    "  #     # # ((a-1, b+1, c), (x-1, y+1, z)),\n",
-    "  #     # # ((a+1, b-1, c), (x+1, y-1, z)), \n",
-    "  #     # # ((a-1, b-1, c), (x-1, y-1, z)),\n",
-    "  #     # ((a, b, c), (a+1, b, c+1)), # shift x and z\n",
-    "  #     # ((a, b+1, c), (a+1, b+1, c+1)),\n",
-    "  #     # ((a, b, c-1), (a+1, b, c)),\n",
-    "  #     # ((a, b+1, c-1), (a+1, b+1, c)),\n",
-    "  #     # ((a, b, c), (a, b+1, c+1)), # shift y and z\n",
-    "  #     # ((a+1, b, c), (a+1, b+1, c+1)),\n",
-    "  #     # ((a, b, c-1), (a, b+1, c)),\n",
-    "  #     # ((a+1, b, c-1), (a+1, b+1, c)),\n",
-    "  #   ]\n",
-    "\n",
-    "  # if a == x:\n",
-    "  #   return [\n",
-    "  #     ((a, b, c+1), (x, y, z+1)), # shift z\n",
-    "  #     ((a, b, c-1), (x, y, z-1)),\n",
-    "  #     ((a, b+1, c), (x, y+1, z)), # shift y\n",
-    "  #     ((a, b-1, c), (x, y-1, z)),\n",
-    "  #     # # ((a, b+1, c+1), (x, y+1, z+1)), # shift y and z\n",
-    "  #     # # ((a, b+1, c-1), (x, y+1, z-1)),\n",
-    "  #     # # ((a, b-1, c+1), (x, y-1, z+1)), \n",
-    "  #     # # ((a, b-1, c-1), (x, y-1, z-1)),\n",
-    "  #     # ((a, b, c), (a+1, b, c+1)), # shift x and z\n",
-    "  #     # ((a, b+1, c), (a+1, b+1, c+1)),\n",
-    "  #     # ((a-1, b, c), (a, b, c+1)),\n",
-    "  #     # ((a-1, b+1, c), (a, b+1, c+1)),\n",
-    "  #     # ((a, b, c), (a+1, b+1, c)), # shift x and y\n",
-    "  #     # ((a, b, c+1), (a+1, b+1, c+1)),\n",
-    "  #     # ((a-1, b, c), (a, b+1, c)),\n",
-    "  #     # ((a-1, b, c+1), (a, b+1, c+1)),\n",
-    "  #   ]\n",
-    "\n",
-    "surfaces = set()\n",
-    "def route_finder(surface, i):\n",
-    "  for s in find_adjacent_surfaces(surface):\n",
-    "    if any([i > 22 or i < 0 for i in (*s[0], *s[1])]):\n",
-    "      continue\n",
-    "    if s in uniques:\n",
-    "      surfaces.add(s)\n",
-    "    else:\n",
-    "      yield (s, i+1)\n",
-    "\n",
-    "print(dijkstra(((0, 0, 0), (1, 1, 0)), ((21, 21, 22), (22, 22, 22)), route_finder))\n",
-    "print(len(surfaces), len(uniques))\n",
-    "\n",
-    "test = surfaces.copy()\n",
-    "for s in surfaces:\n",
-    "  # for i in generate_sides(s[0]):\n",
-    "  for i in [*generate_sides(s[0]), *generate_sides(s[1])]:\n",
-    "    if i in uniques:\n",
-    "      test.add(i)\n",
-    "print(len(test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66\n",
-      "64 64\n"
-     ]
-    }
-   ],
-   "source": [
-    "surfaces = set()\n",
-    "def route_finder(surface, i):\n",
-    "  x, y, z = surface\n",
-    "  for s in [\n",
-    "    (x+1, y, z),\n",
-    "    (x-1, y, z),\n",
-    "    (x, y+1, z),\n",
-    "    (x, y-1, z),\n",
-    "    (x, y, z+1),\n",
-    "    (x, y, z-1),\n",
-    "  ]:\n",
-    "    if any([n < 0 or n > 22 for n in s]):\n",
-    "      continue\n",
-    "    if a[s]:\n",
-    "      for side in generate_sides(s):\n",
-    "        if side in uniques:\n",
-    "          surfaces.add(side)\n",
-    "    else:\n",
-    "      yield (s, i+1)\n",
-    "\n",
-    "print(dijkstra((0,0,0), (22,22,22), route_finder))\n",
-    "print(len(surfaces), len(uniques))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
