--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1639,14 +1639,14 @@
        "2444"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def generate_surface_diff(initial, s1, s2):\n",
-    "  # No idea why this function works, I have aphantasia\n",
+    "  # Project from surface out of current cube\n",
     "  if s1 != s2:\n",
     "    return 0\n",
     "  return -1 if initial == s1 else 1\n",
@@ -1691,15 +1691,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse19(line):\n",
+    "  m = re.match('Blueprint (\\d+): Each ore robot costs (\\d+) ore. Each clay robot costs (\\d+) ore. Each obsidian robot costs (\\d+) ore and (\\d+) clay. Each geode robot costs (\\d+) ore and (\\d+) obsidian.', line)\n",
+    "  _, ore, clay, ob_ore, ob_clay, ge_ore, ge_ob = m[1], m[2], m[3], m[4], m[5], m[6], m[7]\n",
+    "  return (\n",
+    "    (-int(ore),0,0,0, 1,0,0,0),\n",
+    "    (-int(clay),0,0,0, 0,1,0,0),\n",
+    "    (-int(ob_ore),-int(ob_clay),0,0, 0,0,1,0),\n",
+    "    (-int(ge_ore),0,-int(ge_ob),0, 0,0,0,1),\n",
+    "  )\n",
+    "\n",
+    "data19 = data(19, parse19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 0, 0, 0, 1, 0, 0, 0) 4\n",
+      "0 (2, 0, 0, 0, 1, 0, 0, 0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0, 0, 0, 1, 0, 0, 0)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ore_robot, clay_robot, obsidian_robot, geode_robot, ore, clay, obsidian, geode\n",
+    "default_state = (0,0,0,0, 1,0,0,0)\n",
+    "\n",
+    "def tuple_add(a, b):\n",
+    "  return tuple(a[i] + (b[i] if i < len(b) else 0) for i in range(len(a)))\n",
+    "\n",
+    "def build_combinations(resources, cost):\n",
+    "  for state in resources:\n",
+    "    for i in range(10):\n",
+    "      state = tuple_add(state, cost)\n",
+    "      if any(x < 0 for x in state):\n",
+    "        break\n",
+    "      yield state\n",
+    "\n",
+    "def prune_states(blueprint, state):\n",
+    "  # Assume we will never not build if we can ever build anything we want\n",
+    "  # As a consequence, we will also not build excess robots of a single type\n",
+    "  max_values = [max(-cost[i] for cost in blueprint) for i in range(3)]\n",
+    "  # state = (\n",
+    "  #   *(min(state[i], max_values[i]-1+state[i+4]) for i in range(3)), \n",
+    "  #   state[3],\n",
+    "  #   *(min(state[i+4], max_values[i]) for i in range(3)), \n",
+    "  #   state[7],\n",
+    "  # )\n",
+    "\n",
+    "  state = (\n",
+    "    *(min(state[i], max_values[i]+1) for i in range(3)), \n",
+    "    state[3],\n",
+    "    *(min(state[i+4], max_values[i]+1) for i in range(3)), \n",
+    "    state[7],\n",
+    "  )\n",
+    "  return state\n",
+    "\n",
+    "@lru_cache()\n",
+    "def robot_potentials(blueprint, state):\n",
+    "  potentials = set()\n",
+    "  for ordering in itertools.permutations(blueprint):\n",
+    "    options = [state]\n",
+    "\n",
+    "    for robot in ordering:\n",
+    "      builds = list(build_combinations(options, robot))\n",
+    "      if not len(builds):\n",
+    "        break\n",
+    "      options = builds\n",
+    "      # print(options)\n",
+    "\n",
+    "    for option in options:\n",
+    "      potential = tuple_add(option, state[4:])\n",
+    "      potentials.add(prune_states(blueprint, potential))\n",
+    "      # potentials.add(potential)\n",
+    "\n",
+    "  return potentials\n",
+    "\n",
+    "# def prune_potentials(potentials):\n",
+    "#   robots = set()\n",
+    "#   for i in potentials:\n",
+    "#     r = i[4:]\n",
+    "#     if r in robots:\n",
+    "#       print(potentials)\n",
+    "#     robots.add(r)\n",
+    "\n",
+    "@lru_cache()\n",
+    "def price_estimate(blueprint, t):\n",
+    "  or_price = -blueprint[0][0]\n",
+    "  cr_price = -blueprint[1][0]\n",
+    "  c_price = int(cr_price/t)\n",
+    "  obr_price = -blueprint[2][1] - blueprint[2][1]*c_price\n",
+    "  ob_price = int(obr_price/t)\n",
+    "  gr_price = (-blueprint[3][1] - blueprint[3][2]*ob_price)\n",
+    "  g_price = int(gr_price/t)\n",
+    "  prices = [1, c_price, ob_price, g_price, or_price, cr_price, obr_price, gr_price]\n",
+    "  return prices\n",
+    "\n",
+    "def state_score(state, prices):\n",
+    "  return int(sum(state[i]*prices[i] for i in range(len(state))))\n",
+    "\n",
+    "best = {}\n",
+    "# def prune_potentials(blueprint, state, t):\n",
+    "#   key = (blueprint, t)\n",
+    "#   score = state_score(blueprint, state, t)\n",
+    "#   if (current := best.get(key, 0)) < score:\n",
+    "#     best[key] = score\n",
+    "#   return score < current - t\n",
+    "\n",
+    "@lru_cache(maxsize=None)\n",
+    "def run_robots(blueprint, state, t):\n",
+    "  if t == 0:\n",
+    "    print(state, state_score(state, price_estimate(blueprint, t+1)))\n",
+    "    return state\n",
+    "    # return state[3]\n",
+    "  potentials = robot_potentials(blueprint, state)\n",
+    "\n",
+    "  # # Force geode production\n",
+    "  # if len(potentials) > 1:\n",
+    "  #   test = sorted(potentials, key=lambda x: x[-1])\n",
+    "  #   if test[0][-1] > test[1][-1]:\n",
+    "  #     potentials = [test[0]]\n",
+    "  #     print('here!', test)\n",
+    "\n",
+    "\n",
+    "  prices = price_estimate(blueprint, t)\n",
+    "  sorted_potentials = sorted(zip([state_score(x, prices) for x in potentials], potentials), reverse=True)\n",
+    "  score = sorted_potentials[0][0]\n",
+    "\n",
+    "  key = (blueprint, t)\n",
+    "  if (current := best.get(key, 0)) < score:\n",
+    "    best[key] = score\n",
+    "  threshold = current*.8 - 100 # TODO: magic number\n",
+    "  # threshold = current - prices[7] # subtract geode robot\n",
+    "  if score < threshold:\n",
+    "    return default_state\n",
+    "    # return 0\n",
+    "\n",
+    "  return max([run_robots(blueprint, option[1], t-1) for option in sorted_potentials if option[0] >= threshold], key=lambda x: x[3])  \n",
+    "  # return max([run_robots(blueprint, option[1], t-1) for option in sorted_potentials if option[0] >= threshold])  \n",
+    "\n",
+    "def day19(blueprints, t=24):\n",
+    "  sum = 0\n",
+    "  for i, v in enumerate(blueprints[1:]):\n",
+    "    state = run_robots(v, default_state, t)\n",
+    "    print(i, state)\n",
+    "    return state\n",
+    "    sum += state * (i+1)\n",
+    "  return sum\n",
+    "\n",
+    "day19(data19, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0.13333333333333333, 1.0577777777777777, 0.4936296296296296, 4, 2, 15.866666666666667, 7.404444444444444]\n",
+      "[1, 0.14285714285714285, 1.1428571428571428, 0.5714285714285714, 4, 2, 16.0, 8.0]\n",
+      "[1, 0.15384615384615385, 1.242603550295858, 0.6690942193900773, 4, 2, 16.153846153846153, 8.698224852071005]\n",
+      "[1, 0.16666666666666666, 1.361111111111111, 0.7939814814814814, 4, 2, 16.333333333333332, 9.527777777777777]\n",
+      "[1, 0.18181818181818182, 1.5041322314049588, 0.9571750563486101, 4, 2, 16.545454545454547, 10.52892561983471]\n",
+      "[1, 0.2, 1.6800000000000002, 1.1760000000000002, 4, 2, 16.8, 11.760000000000002]\n",
+      "[1, 0.2222222222222222, 1.9012345679012346, 1.4787379972565158, 4, 2, 17.11111111111111, 13.308641975308642]\n",
+      "[1, 0.25, 2.1875, 1.9140625, 4, 2, 17.5, 15.3125]\n",
+      "[1, 0.2857142857142857, 2.5714285714285716, 2.5714285714285716, 4, 2, 18.0, 18.0]\n",
+      "[1, 0.3333333333333333, 3.1111111111111107, 3.6296296296296293, 4, 2, 18.666666666666664, 21.777777777777775]\n",
+      "[1, 0.4, 3.9200000000000004, 5.488, 4, 2, 19.6, 27.44]\n",
+      "[1, 0.5, 5.25, 9.1875, 4, 2, 21.0, 36.75]\n",
+      "[1, 0.6666666666666666, 7.777777777777778, 18.14814814814815, 4, 2, 23.333333333333332, 54.44444444444444]\n",
+      "[1, 1.0, 14.0, 49.0, 4, 2, 28.0, 98.0]\n",
+      "[1, 2.0, 42.0, 294.0, 4, 2, 42.0, 294.0]\n",
+      "[5, 5, 7, 8, 9, 10, 12, 14, 16, 19, 33, 42, 60, 100, 275]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{24: 5,\n",
+       " 23: 6,\n",
+       " 22: 7,\n",
+       " 21: 8,\n",
+       " 20: 9,\n",
+       " 19: 11,\n",
+       " 18: 13,\n",
+       " 17: 15,\n",
+       " 16: 18,\n",
+       " 15: 21,\n",
+       " 14: 28,\n",
+       " 13: 32,\n",
+       " 12: 40,\n",
+       " 11: 47,\n",
+       " 10: 57,\n",
+       " 9: 73,\n",
+       " 8: 85,\n",
+       " 7: 111,\n",
+       " 6: 129,\n",
+       " 5: 168,\n",
+       " 4: 226,\n",
+       " 3: 355,\n",
+       " 2: 744,\n",
+       " 1: 3819}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def state_score(blueprint, state, t):\n",
+    "  or_price = -blueprint[0][0]\n",
+    "  cr_price = -blueprint[1][0]\n",
+    "  c_price = cr_price/t\n",
+    "  obr_price = -blueprint[2][1] - blueprint[2][1]*c_price\n",
+    "  ob_price = obr_price/t\n",
+    "  gr_price = (-blueprint[3][1] - blueprint[3][2]*ob_price)\n",
+    "  g_price = gr_price/t\n",
+    "  prices = [1, c_price, ob_price, g_price, or_price, cr_price, obr_price, gr_price]\n",
+    "  print(prices)\n",
+    "  return int(sum(state[i]*prices[i] for i in range(len(state))))\n",
+    "\n",
+    "print([state_score(data19[0], v, 15-i) for i, v in enumerate([(1, 0, 0, 0, 1, 0, 0, 0),\n",
+    "(1, 0, 0, 0, 1, 0, 0, 0),\n",
+    "(1, 0, 0, 0, 1, 1, 0, 0),\n",
+    "(2, 1, 0, 0, 1, 1, 0, 0),\n",
+    "(1, 2, 0, 0, 1, 2, 0, 0),\n",
+    "(2, 4, 0, 0, 1, 2, 0, 0),\n",
+    "(1, 6, 0, 0, 1, 3, 0, 0),\n",
+    "(2, 9, 0, 0, 1, 3, 0, 0),\n",
+    "(3, 12, 0, 0, 1, 3, 0, 0),\n",
+    "(4, 15, 0, 0, 1, 3, 0, 0),\n",
+    "(2, 4, 0, 0, 1, 3, 1, 0),\n",
+    "(1, 7, 1, 0, 1, 4, 1, 0),\n",
+    "(2, 11, 2, 0, 1, 4, 1, 0),\n",
+    "(3, 15, 3, 0, 1, 4, 1, 0),\n",
+    "(1, 5, 4, 0, 1, 4, 2, 0)])])\n",
+    "\n",
+    "best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-2, 0, 0, 0, -2, 0, 0, 0)\n",
+      "(-2, 0, 0, 0, -2, 0, 0, 0)\n",
+      "{(-2, 0, 0, 0, -2, 0, 0, 0)}\n",
+      "{(2, 1, 0, 0, 1, 1, 0, 0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = default_state\n",
+    "state = list(robot_potentials(data19[0], state))[0]\n",
+    "print(state)\n",
+    "state = list(robot_potentials(data19[0], state))[0]\n",
+    "print(state)\n",
+    "state = robot_potentials(data19[0], state)\n",
+    "print(state)\n",
+    "state = robot_potentials(data19[0], (1, 0, 0, 0, 1, 1, 0, 0))\n",
+    "print(state)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.11.0 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -1718,7 +2004,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ca3ed784184f1b3bb7c3539bfb45e71710cd27667424f92c2d5bb4df9c107c23"
+    "hash": "728fda44ccb96f2ef97227e2e00831284321f32932a1624dced75e1d30908e3d"
    }
   }
  },
