--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1843,10 +1843,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node:\n",
+    "  def __init__(self, value, previous=None):\n",
+    "    self.value = value\n",
+    "    self.previous = previous\n",
+    "    self.next = None\n",
+    "\n",
+    "  def unset(self):\n",
+    "    self.previous.next = self.next\n",
+    "    self.next.previous = self.previous\n",
+    "    return self\n",
+    "    \n",
+    "  def __repr__(self):\n",
+    "    return f'{self.value}'\n",
+    "\n",
+    "def parse20(data):\n",
+    "  head = Node(data[0])\n",
+    "  previous, zero = head, head\n",
+    "  for i in data[1:]:\n",
+    "    current = Node(i, previous)\n",
+    "    previous.next, previous = current, current\n",
+    "    if i == 0:\n",
+    "      zero = current\n",
+    "  head.previous, current.next = current, head\n",
+    "  return head\n",
+    "\n",
+    "data20 = data(20, int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 2, -3, 3, -2, 0, 4\n",
+      "moved 1: 2, 1, -3, 3, -2, 0, 4\n",
+      "moved 2: 1, -3, 2, 3, -2, 0, 4\n",
+      "moved -3: 2, 3, -3, -2, 0, 4, 1\n",
+      "moved 3: -3, -2, 0, 3, 4, 1, 2\n",
+      "moved -2: 0, -2, 3, 4, 1, 2, -3\n",
+      "moved 4: 1, 2, -3, 0, 4, -2, 3\n",
+      "1, 2, -3, 0, 4, -2, 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shift_right(node, value):\n",
+    "  current = node.unset()\n",
+    "  for i in range(value):\n",
+    "    current = current.next\n",
+    "  current.next.previous = node\n",
+    "  node.next = current.next\n",
+    "  current.next = node\n",
+    "  node.previous = current\n",
+    "\n",
+    "def shift_left(node, value):\n",
+    "  current = node.unset()\n",
+    "  for i in range(value):\n",
+    "    current = current.previous\n",
+    "  current.previous.next = node\n",
+    "  node.previous = current.previous\n",
+    "  current.previous = node\n",
+    "  node.next = current\n",
+    "\n",
+    "def day20(head, length):\n",
+    "  visited = set()\n",
+    "  i = 0\n",
+    "  while len(visited) < length -1:\n",
+    "    current, head, value = head, head.next, head.value\n",
+    "    if current in visited or value == 0:\n",
+    "      continue\n",
+    "    shift, right = value%length, value > 0\n",
+    "    (shift_right if right else shift_left)(current, shift)\n",
+    "    print(f'moved {current}: {debug20(head)}')\n",
+    "    visited.add(current)\n",
+    "    \n",
+    "def debug20(head):\n",
+    "  current, result = head, []\n",
+    "  while current.next != head:\n",
+    "    if current.next.previous != current.previous.next != current:\n",
+    "      print(current, current.next.previous, current.previous.next)\n",
+    "    result.append(str(current.value))\n",
+    "    current = current.next\n",
+    "  result.append(str(current.value))\n",
+    "  return ', '.join(result)\n",
+    "\n",
+    "head = parse20(data20)\n",
+    "print(debug20(head))\n",
+    "# shift_right(head, 2)\n",
+    "# print(head)\n",
+    "# debug20(head)\n",
+    "# shift_left(head, 2)\n",
+    "# print(head)\n",
+    "# debug20(head)\n",
+    "day20(head, len(data20))\n",
+    "print(debug20(head))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19559"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "  def __init__(self, value, previous=None):\n",
+    "    self.value = value\n",
+    "    self.previous = previous\n",
+    "    self.next = None\n",
+    "\n",
+    "  def unset(self):\n",
+    "    self.previous.next = self.next\n",
+    "    self.next.previous = self.previous\n",
+    "    return self\n",
+    "    \n",
+    "  def __repr__(self):\n",
+    "    return f'{self.value}'\n",
+    "\n",
+    "def parse20(data):\n",
+    "  nodes = [Node(i) for i in data]\n",
+    "  for i, v in enumerate(nodes):\n",
+    "    v.previous = nodes[i-1]\n",
+    "    v.next = nodes[(i+1)%len(nodes)]\n",
+    "  return nodes\n",
+    "\n",
+    "data20 = data(20, int)\n",
+    "parse20(data20)\n",
+    "\n",
+    "def shift_right(node, value):\n",
+    "  if not value:\n",
+    "    return\n",
+    "  current = node.unset()\n",
+    "  for i in range(value):\n",
+    "    current = current.next\n",
+    "  current.next.previous = node\n",
+    "  node.next = current.next\n",
+    "  current.next = node\n",
+    "  node.previous = current\n",
+    "\n",
+    "def shift_left(node, value):\n",
+    "  if not value:\n",
+    "    return\n",
+    "  current = node.unset()\n",
+    "  for i in range(value):\n",
+    "    current = current.previous\n",
+    "  current.previous.next = node\n",
+    "  node.previous = current.previous\n",
+    "  current.previous = node\n",
+    "  node.next = current\n",
+    "\n",
+    "def mix_nodes(nodes):\n",
+    "  zero = None\n",
+    "  for i, v in enumerate(nodes):\n",
+    "    if not v.value:\n",
+    "      zero = v\n",
+    "      continue\n",
+    "    # shift, right = abs(v.value)%(len(nodes)-1), v.value > 0\n",
+    "    shift, right = abs(v.value), v.value > 0\n",
+    "    (shift_right if right else shift_left)(v, shift)\n",
+    "    # print(f'moved {v}: {debug20(nodes[0])}')\n",
+    "  return zero\n",
+    "    \n",
+    "def debug20(head):\n",
+    "  current, result = head, []\n",
+    "  while current.next != head:\n",
+    "    if current.next.previous != current.previous.next != current:\n",
+    "      print('error', current, current.next.previous, current.previous.next)\n",
+    "    result.append(str(current.value))\n",
+    "    current = current.next\n",
+    "  result.append(str(current.value))\n",
+    "  return ', '.join(result)\n",
+    "\n",
+    "def get_nth_node(node, n):\n",
+    "  for i in range(n):\n",
+    "    node = node.next\n",
+    "  return node.value\n",
+    "\n",
+    "def day20(nodes):\n",
+    "  sum = 0\n",
+    "  zero = mix_nodes(nodes)\n",
+    "  for i in [1000, 2000, 3000]:\n",
+    "    sum += get_nth_node(zero, i%len(nodes))\n",
+    "  return sum\n",
+    "\n",
+    "nodes = parse20(data20)\n",
+    "# print(debug20(nodes[0]))\n",
+    "\n",
+    "day20(nodes)"
+   ]
   }
  ],
  "metadata": {
