--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1852,16 +1852,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19559"
+       "(19559, 912226207972)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
     "  if not value:\n",
     "    return\n",
     "  current = node.unset()\n",
-    "  for i in range(value):\n",
+    "  for _ in range(value):\n",
     "    current = current.next\n",
     "  current.next.previous = node\n",
     "  node.next = current.next\n",
@@ -1903,7 +1903,7 @@
     "  if not value:\n",
     "    return\n",
     "  current = node.unset()\n",
-    "  for i in range(value):\n",
+    "  for _ in range(value):\n",
     "    current = current.previous\n",
     "  current.previous.next = node\n",
     "  node.previous = current.previous\n",
@@ -1912,20 +1912,17 @@
     "\n",
     "def mix_nodes(nodes):\n",
     "  zero = None\n",
-    "  for i, v in enumerate(nodes):\n",
+    "  for _, v in enumerate(nodes):\n",
     "    if not v.value:\n",
     "      zero = v\n",
     "      continue\n",
     "    shift, right = abs(v.value)%(len(nodes)-1), v.value > 0\n",
     "    (shift_right if right else shift_left)(v, shift)\n",
-    "    # print(f'moved {v}: {debug_nodes(nodes[0])}')\n",
     "  return zero\n",
     "    \n",
     "def debug_nodes(head):\n",
     "  current, result = head, []\n",
     "  while current.next != head:\n",
-    "    if current.next.previous != current.previous.next != current:\n",
-    "      print('error', current, current.next.previous, current.previous.next)\n",
     "    result.append(str(current.value))\n",
     "    current = current.next\n",
     "  result.append(str(current.value))\n",
@@ -1947,27 +1944,7 @@
     "    sum += get_nth_node(zero, i%len(data))\n",
     "  return sum\n",
     "\n",
-    "day20(data20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "912226207972"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "day20(data20, 811589153)"
+    "day20(data20), day20(data20, 811589153)"
    ]
   },
   {
